[gd_scene load_steps=4 format=4 uid="uid://cf2hj5xgdpb3x"]

[ext_resource type="Script" path="res://Scripts/TeamLobbyManager.gd" id="1_7n0f3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lobby"]
bg_color = Color(0.2, 0.2, 0.2, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_team_container"]
bg_color = Color(0.15, 0.15, 0.15, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.4, 0.4, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="TeamLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7n0f3")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -175.0
offset_right = 250.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lobby")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -155.0
offset_right = 230.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Team Lobby"
horizontal_alignment = 1

[node name="ModeLabel" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "Mode: Team Slayer"
horizontal_alignment = 1

[node name="PlayerCountLabel" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Players: 1/6"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="TeamsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TeamA" type="Panel" parent="VBoxContainer/TeamsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_team_container")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TeamsContainer/TeamA"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="TeamALabel" type="Label" parent="VBoxContainer/TeamsContainer/TeamA/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Team A"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/TeamsContainer/TeamA/VBoxContainer"]
layout_mode = 2

[node name="TeamAPlayers" type="VBoxContainer" parent="VBoxContainer/TeamsContainer/TeamA/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TeamSwitchContainer" type="VBoxContainer" parent="VBoxContainer/TeamsContainer"]
layout_mode = 2

[node name="TeamSwitchButton" type="Button" parent="VBoxContainer/TeamsContainer/TeamSwitchContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "â‡„"
theme_override_font_sizes/font_size = 20

[node name="TeamB" type="Panel" parent="VBoxContainer/TeamsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_team_container")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TeamsContainer/TeamB"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="TeamBLabel" type="Label" parent="VBoxContainer/TeamsContainer/TeamB/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Team B"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/TeamsContainer/TeamB/VBoxContainer"]
layout_mode = 2

[node name="TeamBPlayers" type="VBoxContainer" parent="VBoxContainer/TeamsContainer/TeamB/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3



[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="StartGameButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "Start Game"
